...
            NavigationStack {
                picker(style: .graphical)
                    .padding()
                    .navigationTitle(title)
                    .inlineNavigationTitle()
                    .toolbar {
                        SheetConfirmButton("完成", identifier: "dayPicker.done") { isPresenting = false }
                    }
            }
            .presentationDetents([.large])
        }
    }

...
